@@ -1,3 +1,5 @@
+- XFdrake:
+  o add option "Force display mode of DVI" on driver "nvidia" (#30066)   
 - XFdrake library:
   o ensure set_default_background() doesn't fail (#39065)
     (ie default to 1024x768 if 0x0 is given)
